--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.78</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
